
  * Bind mount /dev to /target/dev instead of creating device nodes for
    devicemapper etc.
  * Ensure static devices created during installation are preserved by first
    bind mounting /target/dev on /dev/.static/dev/. MAKEDEV will then detect
    udev is used (provided proc is mounted in /target).
    Note: any devices created in /target/dev/ itself will get lost.

 -- Frans Pop <fjp@debian.org>  Mon, 12 Nov 2007 00:16:56 +0100

base-installer (1.84) unstable; urgency=low

  [ Frans Pop ]
  * Drop isinstallable test for sarge, we don't support sarge installs
    anymore.
  * Remove support for sparc32.

  [ Colin Watson ]
  * Clean up /tmp/available_kernels.txt.unfiltered too.

  [ Joey Hess ]
  * Install busybox before installing initramfs-tools, to support version 0.91
    which will only recommend busybox.

  [ Updated translations ]
  * Bengali (bn.po) by Jamil Ahmed
  * Italian (it.po) by Stefano Canepa
  * Dutch (nl.po) by Frans Pop
  * Swedish (sv.po) by Daniel Nylander
  * Vietnamese (vi.po) by Clytie Siddall

 -- Otavio Salvador <otavio@debian.org>  Tue, 11 Sep 2007 09:12:17 -0300

base-installer (1.83) unstable; urgency=low

  [ Fabio M. Di Nitto ]
  * Install smp kernel by default on sun4v (Niagara based sparc).
    With the new LDOM support on the way, adding/removing CPU's
    from control/service/guest nodes is easy as drinking a glass
    of water. With this change we will guarantee that the user
    will always get the best setup.

  [ Frans Pop ]
  * Drop preprogrammed kernel defaults as that mechanism is no longer used.
  * Restructure kernel selection to allow for preseeding. Preseeding "none"
    to skip installing a kernel is supported.
  * If we could not determine any reasonable default kernel, ask the question
    at critical priority.
  * Sort the kernel list in ascending order. With the improved method of
    selecting a default and the fact that we no longer have different kernel