@@ -1,9 +1,11 @@
 debootstrap (1.0.7) UNRELEASED; urgency=low
 
   * No longer include full devices tarball in udeb.
-    Requires base-installer 1.85.
+  * Utility pkgdetails moved from debootstrap-udeb to bootstrap-base so that
+    the udeb can become 'Architecture: all'.
+  * Changes in udeb require base-installer 1.85.
 
- -- Frans Pop <fjp@debian.org>  Fri, 09 Nov 2007 21:21:11 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 13 Nov 2007 02:14:55 +0100
 
 debootstrap (1.0.6) unstable; urgency=low
 
